emulator/src/preprocessor/snapshots/z33_emulator__preprocessor__tests__user_error_in_include_test.snap
---
source: emulator/src/preprocessor/mod.rs
assertion_line: 822
expression: report
---
error: #error: message
  ┌─ /error.S:1:8
  │
1 │ #error "message"
  │        ^^^^^^^^^ message
  │
  ┌─ /include.S:1:10
  │
1 │ #include "error.S"
  │          --------- included from here
